# api_getway/api/router.go
@@ -1,10 +1,10 @@
 package api
 
 import (
-	v1 "github.com/PentaGol/api_getway/api/handlers/v1"
 	jwthandler "github.com/PentaGol/api_getway/api/token"
 	"github.com/casbin/casbin/v2"
-
+	
+	"github.com/PentaGol/api_getway/api/handlers/v1"
 	"github.com/PentaGol/api_getway/api/middileware"
 	"github.com/PentaGol/api_getway/config"
 	"github.com/PentaGol/api_getway/pkg/logger"
@@ -54,17 +54,18 @@ func New(option Option) *gin.Engine {
 	router.Use(middileware.NewAuth(option.CasbinEnforcer, jwt, option.Conf))
 
 	api := router.Group("/v1")
-	// users
-	api.GET("/user/:id", handlerV1.GetAdminById)
+	// admins
+	api.GET("/admin/:id", handlerV1.GetAdminById)
+	api.POST("/admin", handlerV1.CreateAdmin)
 
 	// login
 	api.GET("/login/:email/:password", handlerV1.Login)
 
 	// posts
-	api.POST("/post", handlerV1.CreatePost)
 	api.GET("/post/:id", handlerV1.GetPostById)
+	api.POST("/post", handlerV1.CreatePost)
+	api.PUT("/post/:id", handlerV1.UpdatePost)
 	api.GET("/posts", handlerV1.GetAllPosts)
-	api.PUT("/posts/:id", handlerV1.UpdatePost)
 	api.DELETE("/post/:id", handlerV1.DeletePost)
 
 	url := ginSwagger.URL("swagger/doc.json")
